Make sure each expertise white space doesn't wrap.

--- a/themes/ejangi/assets/scss/_home.scss
+++ b/themes/ejangi/assets/scss/_home.scss
@@ -146,6 +146,7 @@
             strong {
                 font-weight: normal;
                 color: $color-light;
+                white-space: nowrap;
             }
         }
     }
